+ Adding color, dimension values and app theme changes Changes in layout files: + Creating layout of chatListItem + Creating layout of messagesListItem with messageText field and messageDate + Creating layout of recyclerView for messages + Several drawables

--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".ui.AuthFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/buttonOpenChatTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Test Chat"/>
 
 
     <Button
@@ -19,7 +21,7 @@
 
 
     <Button
-        android:layout_gravity="end"
+
         android:id="@+id/buttonConnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,4 +29,4 @@
 
 
 
-</FrameLayout>
+</LinearLayout>
