--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="chat_item_background">#1985c1</color>
+    <color name="chat_background">#E3F2FD</color>
+    <color name="message_background_mine">#60b4f4</color>
+    <color name="message_background_not_mine">#AED581</color>
 </resources>
