--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
+        android:id="@+id/chatHeader"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="50dp"
+        android:background="@drawable/shape_empty"
+        android:elevation="10dp"
+        android:padding="0dp"
+        >
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/chatHeaderTitle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="?colorPrimaryDark"
+            tools:text="@tools:sample/full_names"
+            />
+    </RelativeLayout>
+
+
+    <include
+        android:id="@+id/includedMessagesList"
+        android:layout_below="@id/chatHeader"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_above="@id/chatInputFooter"
+        layout="@layout/chats_list"/>
+
+    <RelativeLayout
+        android:id="@+id/chatInputFooter"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/shape_empty"
+        android:backgroundTint="?colorPrimaryDark"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        >
+        <EditText
+            android:id="@+id/chatInputMessage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:hint="Send message..."
+            android:paddingStart="10dp"
+            android:layout_toStartOf="@id/chatInputSendButton"
+            />
+        <ImageView
+            android:id="@+id/chatInputSendButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="5dp"
+            android:src="@drawable/ic_round_send_24"
+            app:tint="?colorSecondaryVariant"
+            />
+    </RelativeLayout>
+
+</RelativeLayout>
