--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,28 @@
         <item name="colorPrimaryDark">#1985c1</item>
         <item name="colorSecondary">#2196f3</item>
         <item name="colorSecondaryVariant">#6ec6ff</item>
-        <item name="android:textColorPrimary">#000000</item>
-        <item name="android:textColorSecondary">#000000</item>
+<!--        <item name="android:textColorPrimary">#000000</item>-->
+<!--        <item name="android:textColorSecondary">#000000</item>-->
 
-        <item name="android:statusBarColor" tools:targetApi="l">#0069c0</item>
+        <item name="android:statusBarColor">#0069c0</item>
+        <item name="android:navigationBarColor">#2196f3</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+
+
+<!--        <item name="colorOnSecondary">@color/white</item>-->
+        <item name="colorSurface">@color/white</item>
+        <item name="colorOnSurface">@color/black</item>
+
+        <item name="android:colorBackground">@color/white</item>
+        <!-- AlertDialogBackground -->
+<!--        <item name="colorBackgroundFloating">?attr/colorSurface</item>-->
+<!--        <item name="colorError">@color/red_500</item>-->
+        <!-- Color of icons in normal state -->
+<!--        <item name="colorControlNormal">@color/blue_grey_700_dark</item>-->
+<!--        <item name="colorControlActivated">@color/white</item>-->
+<!--        <item name="colorControlHighlight">@color/blue_grey_700_dark</item>-->
+
     </style>
 </resources>
