--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/chat_background"
-    tools:context=".ui.StartFragment">
+    tools:context=".ui.AuthFragment">
 
     <ProgressBar
         android:id="@+id/mainProgressBar"
