--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,61 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ChatFragment">
 
-    <RelativeLayout
+
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/chatHeader"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/shape_empty"
         android:elevation="10dp"
-        android:padding="0dp"
-        >
+        android:padding="0dp">
 
         <TextView
             android:id="@+id/chatHeaderTitle"
-            android:layout_width="match_parent"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:background="?colorPrimaryDark"
-            tools:text="@tools:sample/full_names"
-            />
-    </RelativeLayout>
+            android:text="@string/app_name"
+            tools:text="@tools:sample/full_names" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
 
     <include
         android:id="@+id/includedMessagesList"
-        android:layout_below="@id/chatHeader"
-        android:layout_height="match_parent"
+        layout="@layout/messages_list"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_above="@id/chatInputFooter"
-        layout="@layout/chats_list"/>
+        android:layout_below="@id/chatHeader" />
 
     <RelativeLayout
         android:id="@+id/chatInputFooter"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/shape_empty"
-        android:backgroundTint="?colorPrimaryDark"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        >
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/shape_empty"
+
+        android:backgroundTint="?colorPrimaryDark">
+
         <EditText
             android:id="@+id/chatInputMessage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_toStartOf="@id/chatInputSendButton"
             android:background="@null"
             android:hint="Send message..."
-            android:paddingStart="10dp"
-            android:layout_toStartOf="@id/chatInputSendButton"
+            android:paddingHorizontal="10dp"
             />
+
         <ImageView
             android:id="@+id/chatInputSendButton"
             android:layout_width="60dp"
@@ -64,8 +64,7 @@
             android:layout_centerVertical="true"
             android:padding="5dp"
             android:src="@drawable/ic_round_send_24"
-            app:tint="?colorSecondaryVariant"
-            />
+            app:tint="?colorSecondaryVariant" />
     </RelativeLayout>
 
 </RelativeLayout>
