--- a/app/src/main/res/layout/messages_list.xml
+++ b/app/src/main/res/layout/messages_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/chat_background"
+    android:paddingHorizontal="10dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:context=".ui.ChatsListFragment"
-    tools:listitem="@layout/chats_list_item" />
+    tools:listitem="@layout/messages_list_item" />
