--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="chat_item_background">#1985c1</color>
     <color name="chat_background">#E3F2FD</color>
+    <color name="chat_item_background">#90CAF9</color>
     <color name="message_background_mine">#60b4f4</color>
     <color name="message_background_not_mine">#AED581</color>
 </resources>
