--- a/app/src/main/res/layout/fragment_chats_list.xml
+++ b/app/src/main/res/layout/fragment_chats_list.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/chat_background"
     android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appToolbar"
@@ -23,11 +24,11 @@
                 android:text="@string/app_name" />
 
             <ImageView
+                android:foreground="?android:attr/selectableItemBackground"
                 android:id="@+id/buttonUpdateChats"
                 android:layout_gravity="end"
-                android:layout_marginEnd="10dp"
-                android:padding="3dp"
-                android:layout_width="40dp"
+                android:padding="6dp"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_round_sync_24"
                 />
