Global changes, changes in app architecture: + Simplifying flow{} construction in viewModel classes. + Moving all TCP and UDP processes to Repo classes. + Implementing Local and Remote classes for each Repo Interface

--- a/app/src/main/res/layout/chats_list.xml
+++ b/app/src/main/res/layout/chats_list.xml
@@ -7,5 +7,5 @@
     android:layout_height="match_parent"
     android:background="@color/chat_background"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:context=".ui.ChatsListFragment"
+    tools:context=".ui.ChatListFragment"
     tools:listitem="@layout/chats_list_item" />
