--- a/app/src/main/res/layout/chats_list_item.xml
+++ b/app/src/main/res/layout/chats_list_item.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:background="@color/chat_item_background"
-    tools:context=".ui.ChatsListFragment">
+    tools:context=".ui.ChatListFragment">
 
     <TextView
         android:id="@+id/chatTitle"
