--- a/app/src/main/res/layout/messages_list_item.xml
+++ b/app/src/main/res/layout/messages_list_item.xml
@@ -11,10 +11,10 @@
         android:id="@+id/messageCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="5dp"
         android:background="@drawable/shape_rounded"
-        android:elevation="7dp"
+        android:elevation="4dp"
         android:padding="10dp"
 
         tools:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:backgroundTint="?colorPrimary"
-        tools:context=".ui.ChatsListFragment">
+        tools:context=".ui.ChatListFragment">
             <!--
             tools:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,6 +37,7 @@
             tools:text="@tools:sample/lorem/random" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/messageDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
