+ Chat class that holds userID, username and lastMessageText + Style for MessageItem - Deleted TCP Services - Deleted MainActivityViewModel

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="chat_background">#E3F2FD</color>
     <color name="chat_item_background">#90CAF9</color>
-    <color name="message_background_mine">#60b4f4</color>
-    <color name="message_background_not_mine">#AED581</color>
+
+    <color name="message_item_mine_background_color">#60b4f4</color>
+    <color name="message_item_not_mine_background_color">#AED581</color>
 </resources>
