--- a/app/src/main/res/layout/message_item_mine.xml
+++ b/app/src/main/res/layout/message_item_mine.xml
@@ -4,39 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/messageLayoutRoot"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <FrameLayout
+        style="@style/MessageStyle"
         android:id="@+id/messageCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
-        android:layout_marginHorizontal="5dp"
-        android:background="@drawable/shape_rounded"
-        android:elevation="4dp"
-        android:padding="10dp"
-
-        tools:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="?colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/message_item_mine_background_color"
         tools:context=".ui.ChatListFragment">
-            <!--
-            tools:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            -->
 
         <TextView
             android:id="@+id/messageText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLength="1200"
             tools:text="@tools:sample/lorem/random" />
 
 
-    </RelativeLayout>
-
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
