--- a/app/src/main/res/layout/chats_list_item.xml
+++ b/app/src/main/res/layout/chats_list_item.xml
@@ -30,6 +30,18 @@
         android:textStyle="italic"
         tools:text="@tools:sample/lorem/random" />
 
+
+    <TextView
+        android:id="@+id/chatCountUnreadMessages"
+        android:layout_above="@id/chatLastMessageDate"
+        android:textStyle="bold"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/shape_circle"
+        tools:text="12" />
+
     <TextView
         android:id="@+id/chatLastMessageDate"
         android:layout_width="wrap_content"
