--- a/app/src/main/res/layout/fragment_chats_list.xml
+++ b/app/src/main/res/layout/fragment_chats_list.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/chat_background"
     android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appToolbar"
+        android:id="@+id/chatListAppBar"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="50dp"
         android:elevation="10dp">
 
@@ -41,8 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         layout="@layout/chats_list"
-        android:layout_below="@id/appToolbar"
+        android:layout_below="@id/chatListAppBar"
         />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
