--- a/app/src/main/res/layout/message_item_mine.xml
+++ b/app/src/main/res/layout/message_item_mine.xml
@@ -2,20 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/messageLayoutRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <FrameLayout
         style="@style/MessageStyle"
-        android:id="@+id/messageCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/message_item_mine_background_color"
-        tools:context=".ui.ChatListFragment">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/messageText"
