--- a/app/src/main/res/layout/fragment_chats_list.xml
+++ b/app/src/main/res/layout/fragment_chats_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/chat_background"
@@ -40,12 +40,16 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
+        android:layout_below="@id/chatListAppBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chatListAppBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/includedChatsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         layout="@layout/chats_list"
-        android:layout_below="@id/chatListAppBar"
         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
