Optimized imports. Deleted unused resource files

--- a/app/src/main/res/drawable/shape_rounded_half_bottom.xml
+++ b/app/src/main/res/drawable/shape_rounded_half_bottom.xml
@@ -8,8 +8,8 @@
         android:right="2dp"
         android:top="2dp" />
     <corners
-        android:bottomLeftRadius="@dimen/cornerHalfRadius"
-        android:bottomRightRadius="@dimen/cornerHalfRadius" />
+        android:bottomLeftRadius="@dimen/cornerRadius"
+        android:bottomRightRadius="@dimen/cornerRadius" />
 
 
 </shape>
