--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <style name="Theme.AlterJuiceChat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
         <item name="colorPrimary">#60b4f4</item>
