--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -11,6 +11,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_margin="10dp"
+        android:tooltipText="@string/toast_searching_the_server"
         android:visibility="invisible"
         tools:visibility="visible" />
 
