--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="chat_background">#E3F2FD</color>
     <color name="chat_item_background">#90CAF9</color>
+    <color name="primaryDark">#1985c1</color>
 
     <color name="message_item_mine_background_color">#60b4f4</color>
     <color name="message_item_not_mine_background_color">#AED581</color>
