--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
 
         <item name="colorPrimary">#60b4f4</item>
         <item name="colorPrimaryVariant">#97e6ff</item>
-        <item name="colorPrimaryDark">#1985c1</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorSecondary">#2196f3</item>
         <item name="colorSecondaryVariant">#6ec6ff</item>
 <!--        <item name="android:textColorPrimary">#000000</item>-->
