--- a/app/src/main/res/layout/fragment_chats_list.xml
+++ b/app/src/main/res/layout/fragment_chats_list.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/chat_background"
     android:layout_height="match_parent">
     <com.google.android.material.appbar.AppBarLayout
@@ -39,17 +40,19 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatsList"
         android:layout_below="@id/chatListAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/chat_background"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/chatListAppBar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/includedChatsList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        layout="@layout/chats_list"
-        />
+        tools:context=".ui.ChatListFragment"
+        tools:listitem="@layout/chats_list_item" />
 
 
 </RelativeLayout>
