~ Moving Dto classes to dto.model package ~ Moving Generator and Parser to dto package ~ Moving DataStore to repo package + base package + fragment animations + gradient animation in auth fragment + rounded corners of appBar and input message field extracting some colors and dimens to files Cleaning up code: comments, variables' name

--- a/app/src/main/res/drawable/shape_rounded_half_top.xml
+++ b/app/src/main/res/drawable/shape_rounded_half_top.xml
@@ -8,8 +8,8 @@
         android:right="2dp"
         android:top="2dp" />
     <corners
-        android:topLeftRadius="@dimen/cornerRadius"
-        android:topRightRadius="@dimen/cornerRadius"
+        android:topLeftRadius="@dimen/cornerHalfTop"
+        android:topRightRadius="@dimen/cornerHalfTop"
         />
 
 </shape>
