--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_background"
     tools:context=".ui.ChatFragment">
 
 
-    <com.google.android.material.appbar.AppBarLayout
+    <FrameLayout
+        style="@style/AppBarStyle"
         android:id="@+id/chatAppBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:elevation="10dp"
-        android:padding="0dp">
+        android:background="@drawable/shape_rounded_half_bottom">
 
         <TextView
             android:id="@+id/chatHeaderTitle"
@@ -24,7 +24,7 @@
             android:text="@string/app_name"
             tools:text="@tools:sample/full_names" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </FrameLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -33,7 +33,6 @@
         android:layout_height="match_parent"
         android:layout_above="@id/linearInputFooter"
         android:layout_below="@id/chatAppBar"
-        android:background="@color/chat_background"
         android:paddingHorizontal="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/message_item_mine" />
@@ -45,7 +44,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/shape_empty"
+        android:background="@drawable/shape_rounded_half_top"
         android:backgroundTint="?colorPrimaryDark"
         android:orientation="horizontal">
 
@@ -56,11 +55,12 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="@string/send_message_hint"
+
             android:inputType="text|textAutoComplete|textAutoCorrect"
             android:paddingHorizontal="10dp" />
 
         <ImageView
-            android:id="@+id/inputSendButton"
+            android:id="@+id/buttonSendMessage"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:padding="5dp"
