--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -29,36 +29,41 @@
         android:textColor="#01579B"
         android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/mainForm"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/appStartMessaging"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/shape_circle"
+        android:backgroundTint="?colorPrimary"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/start_messaging"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appTitle" />
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mainForm"
-        android:layout_width="match_parent"
+        android:id="@+id/mainAuthForm"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/shape_rounded"
         android:elevation="10dp"
-        android:orientation="vertical"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        app:layout_constraintDimensionRatio="3:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-        <Button
-            android:id="@+id/appStartMessaging"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="10dp"
-            android:text="@string/start_messaging"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/appTitle">
 
         <TextView
             android:id="@+id/foundTcpIpText"
@@ -68,16 +73,12 @@
             android:padding="5dp"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/appStartMessaging"
-            tools:text="@string/found_server_on"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/found_server_on" />
 
         <EditText
-            android:visibility="gone"
-            tools:visibility="visible"
             android:id="@+id/textInputUsername"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -89,8 +90,6 @@
             app:layout_constraintTop_toBottomOf="@id/foundTcpIpText" />
 
         <Button
-            android:visibility="gone"
-            tools:visibility="visible"
             android:id="@+id/buttonSignIn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
